# HyperCudaX

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark_matmul.cpp  profile.sh
include/: hypercudax.h
src/: matmul.cu  matmul_fp16.cu
